# sf-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SAP SuccessFactorsAPI_Servers.csv  main.py  pyproject.toml
sf_mcp/: __init__.py  auth.py  cache.py  client.py  config.py  decorators.py  dependencies.py  logging_config.py  rate_limiter.py  server.py  validation.py  xml_utils.py
sf_mcp/tools/: __init__.py  admin.py  audit.py  compliance.py  configuration.py  employee.py  mdf.py  monitoring.py  permissions.py  position.py  query.py  recruiting.py  time_off.py  utils.py  workflow.py
tests/: conftest.py  test_cache.py  test_client.py  test_client_rate_limit.py  test_config.py  test_decorators.py  test_pagination.py  test_rate_limiter.py  test_validation.py
