[project]
name = "sf-mcp"
version = "0.2.0"
description = "SAP SuccessFactors MCP server with 29 HR tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "defusedxml>=0.7.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
