[project]
name = "sf-mcp"
version = "0.3.2"
description = "SAP SuccessFactors MCP server with 43 HR tools for Claude Desktop and Cloud Run"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "sap", "successfactors", "hr", "odata", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial :: Human Resources",
]
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "defusedxml>=0.7.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Repository = "https://github.com/aiadiguru2025/sf-mcp"
Issues = "https://github.com/aiadiguru2025/sf-mcp/issues"
Changelog = "https://github.com/aiadiguru2025/sf-mcp/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
